@startuml

title Diagrama Clases - CineRoadmap
' Clases

class Usuario {
    -contrasena: String
    -email: String
    -nombreUsuario: String
    -fotoUsuario: String
    -listaPeliculas: ArrayList<Pelicula>
    -listaRetos: ArrayList<Reto>
    -listaLogros: ArrayList<Logro>
    +Usuario(contrasena, email, nombreUsuario, fotoUsuario)
    +Usuario(contrasena, email, nombreUsuario)
    +setNombreUsuario(String)
    +setEmail(String)
    +setContrasena(String)
    +setFoto(String)
    +setPeliculas(Pelicula)
    +setInsignias(Insignia)
    +setRetos(Reto)
    +setLogros(Logro)
    +getNombreUsuario(): String
    +getEmail(): String
    +getContrasena(): String
    +getFoto(): String
    +getPeliculas(): ArrayList<Pelicula>
    +getRetos(): ArrayList<Reto>
    +getLogros(): ArrayList<Logro>
}

class Pelicula {
    -nombrePelicula: String
    -anio: int
    -arrayGeneros: ArrayList<String>
    -arrayDirectores: ArrayList<String>
    -arrayActores: ArrayList<String>
    -descripcion: String
    -fotoPelicula: String
    +getNombrePelicula(): String
    +getAnio(): int
    +getGeneros(): ArrayList<String>
    +getDirectores(): ArrayList<String>
    +getActores(): ArrayList<String>
}

class Calificacion {
    -calificacion: int
    -fechaCalificacion: Date
    -pelicula: Pelicula
    -usuario: Usuario
    -comentario: String
    +getCalificacion(): int
    +setCalificacion(int)
    +getFechaCalificacion(): Date
    +setFechaCalificacion(Date)
    +getPelicula(): Pelicula
    +getUsuario(): Usuario
    +getComentarioPelicula(): String
}

class Reto {
    -idReto: int
    -nombreReto: String
    -estadoReto: boolean
    +getNombreReto(): String
    +getID(): int
    +getEstado(): boolean
    +setEstado(boolean)
}

class Logro {
    -idLogro: int
    -nombreLogro: String
    -descripcionLogro: String
    -insignia: Insignia
    +getNombreReto(): String
    +getID(): int
    +getDescripcion(): String
}

class Insignia {
    -idInsignia: int
    -nombreInsignia: String
    -descripcionInsignia: String
    +getNombreInsignia(): String
    +getID(): int
    +getDescripcion(): String
}

class Comunidad {
    -listaUsuarios: ArrayList<Usuario>
    +getUsuarios(): ArrayList<Usuario>
}


abstract class Recomendacion {
    -idRecomendacion: int
    -fecha: Date
    -pelicula: Pelicula
    -usuario: Usuario
    +getUsuarioDestino(): Usuario
    +getPelicula(): Pelicula
}

class RecomendacionSistema
{
    -criterio: String
    +getCriterio(): String
}

enum CriterioRecomendacion {
    GENEROS_FAVORITOS
    RETOS_COMPLETADOS
    HISTORIAL_USUARIO
    MEJOR_VALORADAS_COMUNIDAD
}

class RecomendacionComunidad {
    -umbralValoracion: int
    -numeroMinValoraciones: int
    +getUmbral(): int
}


' Relaciones
Usuario "1" --> "0..*" Pelicula : listaPeliculas
Usuario "1" --> "0..*" Calificacion
Pelicula "1" --> "0..*" Calificacion
Logro "1" --> "1" Insignia : Insignia
Usuario "1" --> "0..*" Reto : listaRetos
Usuario "1" --> "0..*" Logro : listaLogros
Usuario "0..*" <--> "1" Comunidad
Recomendacion <|-- RecomendacionSistema
Recomendacion <|-- RecomendacionComunidad
Usuario "1" <-- "0..*" Recomendacion
Pelicula "1" <-- "0..*" Recomendacion
RecomendacionComunidad ..> Calificacion : basado en
Comunidad "1" --> "0..*" RecomendacionComunidad : genera
RecomendacionSistema "1" --> "0.." CriterioRecomendacion
@enduml
